tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__add.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"1 + 2\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                Add(
                    Number(
                        1.0,
                    ),
                    (),
                    Number(
                        2.0,
                    ),
                ),
            ),
        ),
    ],
)
