tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__add_and_subtract.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"1 + 2 - 3\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                Subtract(
                    Add(
                        Number(
                            1.0,
                        ),
                        (),
                        Number(
                            2.0,
                        ),
                    ),
                    (),
                    Number(
                        3.0,
                    ),
                ),
            ),
        ),
    ],
)
