tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__and-2.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"true and false and true\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                And(
                    And(
                        Boolean(
                            True,
                        ),
                        (),
                        Boolean(
                            False,
                        ),
                    ),
                    (),
                    Boolean(
                        True,
                    ),
                ),
            ),
        ),
    ],
)
