tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__and.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"true and false\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                And(
                    Boolean(
                        True,
                    ),
                    (),
                    Boolean(
                        False,
                    ),
                ),
            ),
        ),
    ],
)
