tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__array-2.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"[1]\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                Array(
                    (),
                    [
                        Number(
                            1.0,
                        ),
                    ],
                    (),
                ),
            ),
        ),
    ],
)
