tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__bool-2.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"false\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                Boolean(
                    False,
                ),
            ),
        ),
    ],
)
