tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__bool.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"true\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                Boolean(
                    True,
                ),
            ),
        ),
    ],
)
