tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__cast-2.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"1 as Num as Text\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                Cast(
                    Cast(
                        Number(
                            1.0,
                        ),
                        (),
                        "Num",
                    ),
                    (),
                    "Text",
                ),
            ),
        ),
    ],
)
