tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__cast.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"1 as Num\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                Cast(
                    Number(
                        1.0,
                    ),
                    (),
                    "Num",
                ),
            ),
        ),
    ],
)
